Add model parameter for OpenResponses API

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,13 @@
 RETELL_API_KEY=your_retell_api_key_here
 
 # OpenClaw URL (required - your OpenClaw gateway with OpenResponses enabled)
-OPENCLAW_URL=http://localhost:3000
+OPENCLAW_URL=http://localhost:18789
 
 # OpenClaw API Key (optional - if your OpenClaw requires authentication)
 # OPENCLAW_API_KEY=your_openclaw_api_key
+
+# OpenClaw Model (optional - defaults to claude-sonnet-4-20250514)
+# OPENCLAW_MODEL=anthropic/claude-sonnet-4-20250514
 
 # Server port (default: 8080)
 PORT=8080
