--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ OPENCLAW_URL=http://localhost:18789
 # OPENCLAW_API_KEY=your_openclaw_api_key
 
 # OpenClaw Model (optional - defaults to claude-sonnet-4-20250514)
-# OPENCLAW_MODEL=anthropic/claude-sonnet-4-20250514
+OPENCLAW_MODEL=anthropic/claude-sonnet-4-20250514
 
 # Server port (default: 8080)
 PORT=8080
